feat: Adding data to spring model.

--- a/src/main/resources/templates/helloworld.html
+++ b/src/main/resources/templates/helloworld.html
@@ -9,6 +9,7 @@
 
     <br /><br />
 
-    Student name: <span th:text="${param.studentName}" />
+    <p>Student name: <span th:text="${param.studentName}" /></p>
+    <p>The message: <span th:text="${message}" /></p>
   </body>
 </html>
