--- a/src/main/resources/templates/helloworld-form.html
+++ b/src/main/resources/templates/helloworld-form.html
@@ -1,11 +1,11 @@
-<!DOCTYPE html>
+<!doctype html>
 <html xmlns:th="http://www.thymeleaf.org">
   <head>
     <meta charset="UTF-8" />
     <title>Hello World - Input Form</title>
   </head>
   <body>
-    <form th:action="@{/processForm}" method="GET">
+    <form th:action="@{/processFormVersionTwo}" method="GET">
       <input type="text" name="studentName" placeholder="What's your name?" />
 
       <input type="submit" />
