feat: Spring MVC form. Radio button.

--- a/src/main/resources/templates/student-confirmation.html
+++ b/src/main/resources/templates/student-confirmation.html
@@ -13,5 +13,9 @@
     <br /><br />
 
     Country: <span th:text="${student.country}" />
+
+    <br /><br />
+
+    Favorite Language: <span th:text="${student.favoriteLanguage}" />
   </body>
 </html>
