--- a/src/main/resources/templates/student-form.html
+++ b/src/main/resources/templates/student-form.html
@@ -31,6 +31,13 @@
 
       <br /><br />
 
+      Favorite Programming Language:
+      <input type="radio" th:field="*{favoriteLanguage}" th:value="Go">Go</input>
+      <input type="radio" th:field="*{favoriteLanguage}" th:value="Java">Java</input>
+      <input type="radio" th:field="*{favoriteLanguage}" th:value="Python">Python</input>
+
+      <hr/>
+
       <input type="submit" value="Submit" />
     </form>
   </body>
