--- a/src/main/resources/templates/student-form.html
+++ b/src/main/resources/templates/student-form.html
@@ -23,20 +23,24 @@
       Country:
 
       <select th:field="*{country}">
-        <option th:value="Brazil">Brazil</option>
-        <option th:value="France">France</option>
-        <option th:value="Germany">Germany</option>
-        <option th:value="India">India</option>
+        <option
+          th:each="tempCountry : ${countries}"
+          th:value="${tempCountry}"
+          th:text="${tempCountry}"
+        />
       </select>
 
       <br /><br />
 
       Favorite Programming Language:
-      <input type="radio" th:field="*{favoriteLanguage}" th:value="Go">Go</input>
-      <input type="radio" th:field="*{favoriteLanguage}" th:value="Java">Java</input>
-      <input type="radio" th:field="*{favoriteLanguage}" th:value="Python">Python</input>
-
-      <hr/>
+      <input
+        type="radio"
+        th:field="*{favoriteLanguage}"
+        th:each="tempLang : ${languages}"
+        th:value="${tempLang}"
+        th:text="${tempLang}"
+      />
+      <hr />
 
       <input type="submit" value="Submit" />
     </form>
