feat: Spring MVC form. Check box.

--- a/src/main/resources/templates/student-confirmation.html
+++ b/src/main/resources/templates/student-confirmation.html
@@ -17,5 +17,16 @@
     <br /><br />
 
     Favorite Language: <span th:text="${student.favoriteLanguage}" />
+
+    <br /><br />
+
+    Favorite Operating Systems:
+
+    <ul>
+      <li
+        th:each="tempSystem : ${student.favoriteSystems}"
+        th:text="${tempSystem}"
+      />
+    </ul>
   </body>
 </html>
