--- a/src/main/resources/templates/student-form.html
+++ b/src/main/resources/templates/student-form.html
@@ -7,6 +7,8 @@
   <body>
     <h3>Student Registration Form</h3>
 
+    <hr />
+
     <form
       th:action="@{/proccessStudentForm}"
       th:object="${student}"
@@ -40,6 +42,18 @@
         th:value="${tempLang}"
         th:text="${tempLang}"
       />
+
+      <br /><br />
+
+      Favorite Operating System:
+      <input
+        type="checkbox"
+        th:field="*{favoriteSystems}"
+        th:each="tempSystem : ${systems}"
+        th:value="${tempSystem}"
+        th:text="${tempSystem}"
+      />
+
       <hr />
 
       <input type="submit" value="Submit" />
