--- a/src/main/resources/templates/customer-confirmation.html
+++ b/src/main/resources/templates/customer-confirmation.html
@@ -7,5 +7,13 @@
   <body>
     The customer is confirmed:
     <span th:text="${customer.firstName + ' ' + customer.lastName}" />
+
+    <br /><br />
+
+    Free passes: <span th:text="${customer.freePasses}" />
+
+    <br /><br />
+
+    Postal Code: <span th:text="${customer.postalCode}" />
   </body>
 </html>
