--- a/src/main/resources/templates/customer-form.html
+++ b/src/main/resources/templates/customer-form.html
@@ -40,6 +40,16 @@
 
       <br /><br />
 
+      Postal Code: <input type="text" th:field="*{postalCode}" />
+
+      <span
+        th:if="${#fields.hasErrors('postalCode')}"
+        th:errors="*{postalCode}"
+        class="error"
+      ></span>
+
+      <br /><br />
+
       <input type="submit" value="Submit" />
     </form>
   </body>
