feat: Make integer field required.

--- a/src/main/resources/templates/customer-form.html
+++ b/src/main/resources/templates/customer-form.html
@@ -30,7 +30,7 @@
 
       <br /><br />
 
-      Free passes: <input type="text" th:field="*{freePasses}" />
+      Free passes (*): <input type="text" th:field="*{freePasses}" />
 
       <span
         th:if="${#fields.hasErrors('freePasses')}"
