feat: Spring MVC form validation. Custom validation.

--- a/src/main/resources/templates/customer-confirmation.html
+++ b/src/main/resources/templates/customer-confirmation.html
@@ -15,5 +15,9 @@
     <br /><br />
 
     Postal Code: <span th:text="${customer.postalCode}" />
+
+    <br /><br />
+
+    Phone Number: <span th:text="${customer.phoneNumber}" />
   </body>
 </html>
