--- a/src/main/resources/templates/employees/employee-form.html
+++ b/src/main/resources/templates/employees/employee-form.html
@@ -32,6 +32,8 @@
         th:object="${employee}"
         method="POST"
       >
+        <input type="hidden" th:field="*{id}" />
+
         <input
           type="text"
           th:field="*{firstName}"
