--- a/src/main/resources/templates/employees/list-employees.html
+++ b/src/main/resources/templates/employees/list-employees.html
@@ -38,6 +38,7 @@
             <th>First Name</th>
             <th>Last Name</th>
             <th>Email</th>
+            <th>Action</th>
           </tr>
         </thead>
 
@@ -46,6 +47,13 @@
             <td th:text="${tempEmployee.firstName}" />
             <td th:text="${tempEmployee.lastName}" />
             <td th:text="${tempEmployee.email}" />
+            <td>
+              <a
+                th:href="@{/employees/showFormForUpdate(employeeId=${tempEmployee.id})}"
+                class="btn btn-info btn-sm"
+                >Update</a
+              >
+            </td>
           </tr>
         </tbody>
       </table>
